# rust-weather

./: Cargo.toml
src/: main.rs  test_weather.json  weather.toml
